argocd/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argpcdingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: argocd.hosrasmus.hopto.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              name: "http"
  tls:
  - secretName: argocdcert-tls-cert
    hosts:
      - argocd.hosrasmus.hopto.org
